style.css
body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
    color: white;
    background-color: black;
    height: 100vh;
    position: relative;
}

#game-container {
    position: absolute;
    left: 50vw; /* 50% from left */
    top: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    align-items: flex-start;
    gap: 100px;
}

canvas {
    border: 10px solid white;
    display: block;
}

#sidebar {
  font-size: 20px;
  font-family: 'Poppins', sans-serif;
  width: 350px;
}

#sidebar h1 {
  margin-top: 0;
}

#sidebar h2 {
  margin-top: 30px;
}


#button-row {
  display: flex;
  gap: 20px;
  margin-top: 20px;
}

button {
    margin-top: 20px;
    font-size: 22px;
    padding: 15px 25px;
    position: relative;
    cursor: pointer;
}

